--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.ssl.key-store-provider=SUN
 server.ssl.key-store-password=password
 server.ssl.key-store-type=JKS
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/project
 spring.datasource.username=project
 spring.datasource.password=project
