--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 server.port=443
-server.ssl.key-alias=selfsigned
-server.ssl.key-password=password
-server.ssl.key-store=classpath:im_keystore.jks
-server.ssl.key-store-provider=SUN
-server.ssl.key-store-password=password
-server.ssl.key-store-type=JKS
+#server.ssl.key-alias=selfsigned
+#server.ssl.key-password=password
+#server.ssl.key-store=classpath:im_keystore.jks
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-store-password=password
+#server.ssl.key-store-type=JKS
 
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/project
